Source/WebKit/NetworkProcess/soup/WebSocketTaskSoup.cpp
@@ -27,6 +27,7 @@
 #include "WebSocketTaskSoup.h"
 
 #include "DataReference.h"
+#include "NetworkProcess.h"
 #include "NetworkSocketChannel.h"
 #include <WebCore/HTTPParsers.h>
 #include <WebCore/ResourceRequest.h>
